--- a/Catmash2020/Catmash2020/Catmash2020.csproj
+++ b/Catmash2020/Catmash2020/Catmash2020.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\CatVotes.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Models\CatVotes.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
